[package]
name = "winfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
sysinfo = "0.39.3"
windows = { version = "0.58", features = [
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }
